On board update, new layout is displayed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="str_join_game">Join Game</string>
     <string name="str_connecting">Connecting To Server</string>
     <string name="str_waiting_for_players">Waiting For Players</string>
+    <string name="str_done_placing">Done Placing</string>
 </resources>
